--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.*",
-		"guzzlehttp/guzzle": "^6.2"
+		"illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || ^8.0 || ^9.0",
+		"guzzlehttp/guzzle": "^6.2 || ^7.0"
 	},
 	"require-dev": {
 	},
